[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-sys"
version = "0.8.7"
edition = "2018"
homepage = "https://github.com/rust-netlink/netlink-sys"
keywords = ["netlink", "ip", "linux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-sys"
description = "netlink sockets, with optional integration with tokio"

[dependencies]
bytes = "1.8"
libc = "0.2.164"
log = "0.4.8"

[dependencies.futures]
optional = true
version = "0.3.31"

[dependencies.tokio]
optional = true
version = "1.41.1"
default-features = false
# We only depend on tokio for PollEvented
features = ["net"]

[dependencies.mio]
optional = true
version = "1.0"
features = ["os-poll", "os-ext"]

[dependencies.async-io]
optional = true
version = "2"

[features]
default = []
mio_socket = ["mio"]
tokio_socket = ["tokio", "futures"]
smol_socket = ["async-io", "futures"]

[dev-dependencies]
netlink-packet-audit = "0.4.1"

[dev-dependencies.tokio]
version = "1.0.1"
default-features = false
# We only depend on tokio for PollEvented
features = ["net", "macros", "rt-multi-thread"]

[dev-dependencies.async-std]
version = "1.13"
features = ["attributes"]


[[example]]
name = "audit_events"

[[example]]
name = "audit_events_tokio"
required-features = ["tokio_socket"]

[[example]]
name = "audit_events_tokio_manual_thread_builder"
required-features = ["tokio_socket"]

[[example]]
name = "audit_events_async_std"
required-features = ["smol_socket"]
